# DNSAccServer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/DNSAccServer/common/: err.h  path.h
include/DNSAccServer/common/interfaces/: i_create_func.h  i_initialized.h  i_singleton.h  i_this_ptr.h
include/DNSAccServer/logger/: appender.h  logger.h
include/common/: common.h  design_models.h
include/common/config/: config.h  config_node.h
include/common/design_models/: singleton.h
include/common/interfaces/: i_is_good.h
include/core/: config.h  event_loop.h  ping.h  singleton.h
include/core/task_pool/: event_loop.h
source/common/: err.cc
source/common/config/: config.cc  config_node.cc
source/common/interfaces/: i_is_good.cc
source/core/: config.cc  event_loop.cc  main.cc  ping.cc
source/service/: main.cc
